# FujiTech-students_app

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  dependencies.py  main.py  pyproject.toml  requirements.txt  testing_commits.txt
backend/app/core/: config.py  database.py
backend/app/models/: bounding_box.py  exam_results.py  locations.py  schools.py
backend/app/routers/: school_types.py  schools.py
backend/data_import/: api_fetcher.py  config.py  constants_to_remove.py  db_decomposer.py  db_seeder.py  main.py  types.py
backend/data_import/api/: exceptions.py  fetcher.py  models.py  types.py
backend/data_import/api/db/: decomposer.py  exceptions.py  excluded_fields.py
backend/data_import/api_types_and_models/: reponse.py
backend/data_import/core/: config.py
backend/data_import/db/: decomposer.py  excluded_fields.py
backend/data_import/excel/: reader.py
backend/data_import/excel/core/: config.py
backend/data_import/excel/db/: table_splitter.py
backend/data_import/score/: scorer.py
backend/data_import/types/: __init__.py  constants.py  school_data.py
backend/data_import/utils/: clean_column_names.py
backend/data_import/utils/db/: session.py
backend/tests/: test_main.py
frontend/: .env.example  .prettierrc  Dockerfile  README.md  eslint.config.mjs  nuxt.config.ts  openapi.json  package-lock 2.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/.husky/: pre-commit
frontend/app/components/: UserMessage.vue
frontend/app/components/map/: MapSchoolLayers.vue
frontend/app/components/nav/: NavBar.vue
frontend/app/composables/: useSchoolGeoJson.ts
frontend/app/constants/: mapLayerStyles.ts
frontend/app/pages/: index.vue  map.vue
frontend/app/types/: api.d.ts  schools.ts
frontend/assets/css/: main.css
frontend/components/: MapComponent.vue  MapSidebar.vue  MapView.client.vue  NavBar.vue  SchoolSearchForm.vue  VoivodeshipsMap.vue
frontend/components/map/: MapView.client.vue
frontend/components/nav/: NavBar.vue  NavLinks.vue
frontend/composables/: fetcher.ts  useApi.ts  useMapInteraction.ts
frontend/constants/: links.ts  mapConfig.ts
frontend/data/: links.ts  voivodeships.ts
frontend/pages/: index.vue  map.vue
frontend/scripts/: generate-api-types.js
frontend/server/api/: [...path].ts
frontend/test/pages/: index.spec.ts
frontend/types/: api.d.ts  links.ts  ol.d.ts  rspo.ts  schools.ts
