[project]
name = "backend"
version = "0.1.0"
description = "Backend written in FastAPI for our project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.10",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.12",
    "ruff>=0.9.9",
]
