[project]
name = "backend"
version = "0.1.0"
description = "Backend written in FastAPI for our project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.10",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "basedpyright>=1.28.4",
    "debugpy>=1.8.12",
    "ruff>=0.9.9",
]

[tool.ruff.lint]
select = [
    "E4", 
    "E7", 
    "E9", 
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "I",     # isort 
    "Q",     # quotes
    "ARG", # unused arguments
    "FAST", # FastAPI
    "N",     # pep8-naming
    "RUF" # ruff-speicif rules
]

[tool.basedpyright]
# using ruff for unused code (ARG rule)
reportUnusedVariable = "none"
reportUnusedImport = "none"
reportUnusedFunction = "none"
reportUnusedClass = "none"
reportUnusedExpression = "none"
